--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
       href="%PUBLIC_URL%/manifest.json"
       crossorigin="use-credentials"
     />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet" /> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/8ac6e13145.js" crossorigin="anonymous"></script>
     <!--
